<resources>
    <string name="app_name">ComandaXpress</string>
    <string name="idiomas" translatable="false">Seleccionar Idioma</string>
    <string-array name="languages_array">
        <item>Castellano</item>
        <item>Galego</item>
    </string-array>
    <!--TEXTOS EN CASTELLANO-->
    <!--Modal generar ticket y abrir mesa-->
    <string name="tvAbrirMesa">¿Quieres marcar esta mesa como ocupada y generar un nuevo ticket?</string>
    <!--PANTALLA AJUSTES-->
    <string name="tvNombreDeUsuario">Nombre de Usuario</string>
    <string name="etNombre">Nombre</string>
    <string name="etApellidos">Apellidos</string>
    <string name="etNombreUsuario">Nombre de usuario</string>
    <string name="etContraseña">Contraseña</string>
    <string name="etEmail">Correo electrónico</string>
    <string name="btnModificarUsuario">Modificar Usuario</string>
    <string name="tvcambioIdioma">Cambio de idioma</string>
    <string name="tvCambioIP">Cambio de IP</string>
    <string name="etEjemploIP">Ejemplo: 192.168.0.1</string>
    <string name="btnCambiarIP">Cambiar IP</string>
    <!--PANTALLA DE LOGIN-->
    <string name="tvTitulo">Bienvenido a ComandaXpress</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="tvInfoCuenta">¿No tienes una cuenta?</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="tvProblemasConexion">¿Tienes problemas de conexión?</string>
    <string name="btnCambiarIP2">Cambiar dirección IP</string>
    <!--Pantalla Ticket Mesa-->
    <string name="tvNumeroMesa">Mesa Número 0</string>
    <string name="tvComensales">Comensales: 0</string>
    <string name="btnCobrarMesa">Cobrar Mesa</string>
    <string name="btnAñadirProducto">Añadir Producto</string>
    <string name="tvPreguntaCobrarMesa">¿Deseas cerrar la mesa y dejarla libre?</string>
    <!-- Pantalla de mesas-->
    <string name="tvGestionMesas">Gestión de Mesas</string>
    <!--Pantalla de productos-->
    <string name="tvProductos">Agregar Productos</string>
    <string name="btnProductos">Agregar</string>
    <!--Pantalla de registro-->
    <string name="tvTituloRegistro">Registrarse</string>
    <string name="btnSacarFoto">Sacar Foto</string>
    <!--Modal Categorias-->
    <string name="tvCategorias">Categorías</string>
    <!--Modal cerrar sesion -->
    <string name="tvPreguntaLogout">¿Estás seguro de que desea cerrar sesión?</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <!-- MENSAJES DE ERROR VARIADOS-->
    <string name="errorUsuarioNoExiste">Usuario o contraseña incorrectos</string>
    <string name="errorServidor">No se encuentra el servidor</string>
    <string name="errorInesperado">Error inesperado</string>
    <string name="errorCambioIP">Error al cambiar la IP</string>
    <string name="errorModificacion">Error durante la modificación</string>
    <string name="errorUsuarioDuplicado">Error, el usuario ya existe</string>
    <string name="errorCierreMesa">Error durante el cierre de la mesa</string>
    <string name="errorCargaCategorias">Error al cargar categorías</string>
    <string name="errorTicketDetalle">Error al recuperar los detalles del ticket</string>
    <string name="errorCargaMesas">Error cargando mesas</string>
    <string name="errorModificacionEstadoMesa">Error al modificar el estado de la mesa</string>
    <string name="errorNuevoTiket">Error al generar un ticket nuevo</string>
    <string name="errorRecargaDatos">Error al recargar datos</string>
    <string name="errorCargaProductos">Error al cargar los productos</string>
    <string name="errorRegistroUsuario">Error durante el registro</string>
    <string name="errorFotoPerfil">Foto de perfil no capturada</string>
    <string name="errorPermisoCamaraDenegado">Permiso de cámara denegado</string>
    <string name="errorCorreo">El correo no es valido</string>
    <string name="errorCamposVacios">Debes rellenar todos los campos</string>
    <string name="errorEliminacionProdcutos">El producto no se ha podido eliminar</string>
    <string name="errorPemisoFoto">No se puede sacar una foto (Permiso denegado)</string>
    <string name="errorFecha">La fecha no es valida</string>
    <string name="errorHistorialTicket">"Ha ocurrido un error al recuperar el historial"</string>
    <string name="errorDetallesVacios">El ticket no contiene productos</string>
    <string name="errorClickDetalles">"Error al recuperar los detalles del ticket"</string>
    <!-- MENSAJE INFORMATIVOS-->
    <string name="CambioIP">IP cambiada</string>
    <string name="ModificacionUsuario">Usuario Modificado Correctamente</string>
    <string name="UsuarioRegistrado">Usuario Registrado Correctamente</string>
    <string name="CobroMesa">Mesa Cobrada Correctamente</string>
    <string name="EliminacionProducto">Producto eliminado</string>

    <!--Historial-->
    <string name="historial_de_tickets">Historial de Tickets</string>
    <string name="numero_de_mesa">Número de Mesa</string>
    <string name="fecha">Fecha (YYYY-MM-DD)</string>
    <string name="buscar">Buscar</string>
    <string name="resultados_de_la_busqueda">Resultados de la búsqueda:</string>

</resources>