<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/colorMediumBlue"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAbrirMesa"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorOffWhite"
        />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAceptar"
        android:textColor="@color/colorOffWhite"
        android:backgroundTint="@color/colorLightBlue"
        />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelar"
        android:backgroundTint="@color/colorLightBlue"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>
</LinearLayout>