<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/fondo"
    tools:context=".Pantallas.AjustesActivity"
    android:fitsSystemWindows="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorLightBlue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imagen_logout"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/icono_logout"
                android:rotation="180"
                android:layout_weight="0"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tituloAjustes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="AJUSTES"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/imagenAjustes"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icono_ajustes"
                    android:layout_marginStart="16dp" />
            </LinearLayout>
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fotoPerfilAjustes"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/fotoperfil"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/nombreUsuarioAjustes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreDeUsuario"
            android:textColor="@color/colorOffWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/fotoPerfilAjustes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <!-- Panel de ajustes para modificar información del usuario -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/panel_fondo_transparente_redondeado"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioAjustes"
            app:layout_constraintVertical_bias="0.06">

            <!-- Campos -->
            <EditText
                android:id="@+id/NombreModificar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/etNombre"
                android:textColor="@color/colorLightBlue"
                android:textColorHint="@color/colorLightBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ApellidosModificar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/etApellidos"
                android:textColor="@color/colorLightBlue"
                android:textColorHint="@color/colorLightBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NombreModificar" />

            <EditText
                android:id="@+id/EmailModificar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/etEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorLightBlue"
                android:textColorHint="@color/colorLightBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ApellidosModificar" />

            <EditText
                android:id="@+id/NombreUsuarioModificar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/etNombreUsuario"
                android:textColor="@color/colorLightBlue"
                android:textColorHint="@color/colorLightBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EmailModificar" />

            <EditText
                android:id="@+id/ContraseñaModificar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/etContraseña"
                android:inputType="textPassword"
                android:textColor="@color/colorLightBlue"
                android:textColorHint="@color/colorLightBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NombreUsuarioModificar" />

            <LinearLayout
                android:id="@+id/layoutFotoModificar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ContraseñaModificar">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/fotoPerfilModificar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fotoperfil" />

                <Button
                    android:id="@+id/btnSacarFotoModificar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorLightBlue"
                    android:textColor="@color/colorOffWhite"
                    android:text="@string/btnSacarFoto" />

            </LinearLayout>

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/colorLightBlue"
                android:text="@string/btnModificarUsuario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutFotoModificar"
                android:textColor="@color/colorOffWhite"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panelIdioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/panel_fondo_transparente_redondeado"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/panel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/txtCambioIdioma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvcambioIdioma"
                android:textSize="18sp"
                android:textColor="@color/colorOffWhite"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtCambioIdioma"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_background"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panelIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/panel_fondo_transparente_redondeado"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/panelIdioma"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/txtCambioIP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvCambioIP"
                android:textSize="18sp"
                android:textColor="@color/colorOffWhite"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etCambioIP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/etEjemploIP"
                app:layout_constraintTop_toBottomOf="@+id/txtCambioIP"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorLightBlue"
                android:textColor="@color/colorLightBlue"/>

            <Button
                android:id="@+id/btnCambiarIP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/btnCambiarIP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCambioIP"
                android:backgroundTint="@color/colorLightBlue"
                android:textColor="@color/colorOffWhite"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
