<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Pantallas.MesaTicketActivity"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:id="@+id/linearLayoutTituloImagen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/colorLightBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/tituloMesaTicket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvNumeroMesa"
            android:textColor="@color/colorOffWhite"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fotoPerfilMesaTicket"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/fotoperfil"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearNumeroComensales"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/colorLightBlue"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTituloImagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/numComensales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvComensales"
            android:textColor="@color/colorOffWhite"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnAñadirProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAñadirProducto"
        android:backgroundTint="@color/colorLightBlue"
        app:layout_constraintTop_toBottomOf="@id/LinearNumeroComensales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/colorOffWhite"
        />

    <ListView
        android:id="@+id/listaProductosAgregados"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnAñadirProducto"
        app:layout_constraintBottom_toTopOf="@id/tvTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:background="@drawable/panel_fondo_transparente_redondeado"
        android:padding="15dp"
        />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/listaProductosAgregados"
        app:layout_constraintBottom_toTopOf="@id/btnCobrarMesa"
        android:textColor="@color/colorOffWhite"
        android:textStyle="bold"
        android:text="Total: 0€"
        android:textSize="25sp"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/btnCobrarMesa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCobrarMesa"
        android:backgroundTint="@color/colorLightBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorOffWhite"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
