<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/fondo"
    android:fitsSystemWindows="true"
    tools:context=".Pantallas.HistorialActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/colorLightBlue"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/historial_de_tickets"
                android:textColor="@color/colorOffWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutFiltros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            android:background="@drawable/panel_fondo_transparente_redondeado">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_de_mesa"
                android:textAlignment="center"
                android:textColor="@color/colorOffWhite"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"/>

            <EditText
                android:id="@+id/editTextNumeroMesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:textColorHint="@color/colorLightBlue"
                android:textColor="@color/colorLightBlue"
                android:inputType="number"
                android:textSize="20sp"
                android:hint="Ejemplo: 2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textAlignment="center"
                android:textColor="@color/colorOffWhite"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"/>

            <EditText
                android:id="@+id/editTextFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:textColorHint="@color/colorLightBlue"
                android:textColor="@color/colorLightBlue"
                android:inputType="date"
                android:textSize="20sp"
                android:hint="Ejemplo: 2024-05-02"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewResultados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultados_de_la_busqueda"
            android:textColor="@color/colorOffWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutFiltros"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/LinearLista"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textViewResultados"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonBuscar"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/panel_fondo_transparente_redondeado"
            android:padding="10dp">

            <ListView
                android:id="@+id/listaTickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/transparent"
                android:dividerHeight="10dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:backgroundTint="@color/colorLightBlue"
            android:textColor="@color/colorOffWhite"
            android:layout_margin="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
